minor style changes in product detail page

--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ button:hover {
 .product-detail-page-grid {
   margin: 0px 50px;
   grid-template-rows: 454px 500px;
-  grid-template-columns: 50% 30%;
+  grid-template-columns: 500px 30%;
   grid-gap: 20px;
 }
 
@@ -213,8 +213,8 @@ button:hover {
   grid-template-rows: 25% 70% 5%;
 }
 
-.selection-option-grid {
-  grid-template-columns: auto auto auto auto;
+.selection-option-flex label {
+  margin-right: 5px;
 }
 
 
