--- a/style.css
+++ b/style.css
@@ -505,3 +505,11 @@ button:hover {
 #homenav:hover {
   color: black;
 }
+
+#cart-icon:hover {
+  filter: invert(97%) sepia(6%) saturate(3%) hue-rotate(314deg) brightness(92%) contrast(91%);
+}
+
+.active #cart-icon{
+  filter: invert(33%) sepia(64%) saturate(1491%) hue-rotate(122deg) brightness(100%) contrast(102%);
+}
