--- a/style.css
+++ b/style.css
@@ -77,6 +77,9 @@ button {
   border-radius: 10px;
   background-color: #00994d;
   color: white;
+  width: max-content;
+  height: max-content;
+  padding: 10px 50px;
 }
 
 button:hover {
