changed styling of cart notification

--- a/style.css
+++ b/style.css
@@ -418,23 +418,7 @@ button:hover {
   color: gray;
 }
 
-.cart-notification {
-  background-color: green;
-  color: white;
-  width: 10px;
-  height: 10px;
-  font-size: 7px;
-  text-align: center;
-  display: inline-block;
-  border: 2px solid green;
-  border-radius: 50%;
-  position: relative;
-}
 
-.cart-notification:hover {
-  color: white;
-  background-color: green;
-}
 
 #home-page-grid {
   grid-template-rows: 500px auto;
@@ -528,3 +512,23 @@ button:hover {
   filter: invert(33%) sepia(64%) saturate(1491%) hue-rotate(122deg) brightness(100%) contrast(102%);
 }
 
+
+#cart-notification {
+  background-color: green;
+  color: white;
+  width: 10px;
+  height: 10px;
+  font-size: 7px;
+  text-align: center;
+  display: inline-block;
+  border: 2px solid green;
+  border-radius: 50%;
+  position: relative;
+  left: -5px;
+  top: 0px;
+}
+
+#cart-notification:hover {
+  color: white;
+  background-color: green;
+}
