--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 /* styles.css */
+/* starter code for radio buttons from <> */
+/* starter code for popup from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_popup */
 
 html, body {
   margin: 0px;
@@ -418,7 +420,65 @@ button:hover {
   color: gray;
 }
 
+/* Popup container - can be anything you want */
+.popup {
+  position: fixed;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  top: 75px;
+  right: 200px;
+}
 
+/* The actual popup */
+.popup .popuptext {
+  display: inline-block;
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  top: 0px;
+  left: 0px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: 75%;
+  width: 0px;
+  height: 0px;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 10px solid #555;
+}
+
+/* Toggle this class - hide and show the popup */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;} 
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
 
 #home-page-grid {
   grid-template-rows: 500px auto;
